# FreqTradeCryptoBot

./: .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  bot.ps1  config.alpaca.live.json  config.alpaca.paper.json  config.live.json  config.paper.json  freqtrade.service  pyproject.toml  pytest.ini  requirements.txt  test_discord.py
.github/workflows/: ci.yml
scripts/: check_alpaca_pairs.py  download_data.py  export_trades.py  mc_bootstrap.py  monitor_bot.py  validate_setup.py
tests/: test_indicators.py
user_data/: config.live.json  config.paper.json  protections.json  trades.alpaca.paper.sqlite-shm  trades.alpaca.paper.sqlite-wal
user_data/strategies/: donchian_atr.py
