[tool.poetry]
name = "freqtrade-crypto-bot"
version = "1.0.0"
description = "Professional Freqtrade crypto trading bot with Donchian ATR strategy"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "strategies", from = "user_data"}]

[tool.poetry.dependencies]
python = "^3.11"
freqtrade = "^2024.1"
pandas = "^2.0.0"
numpy = "^1.24.0"
ta-lib = {version = "^0.4.28", optional = true}
pandas-ta = "^0.3.14b"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.poetry.extras]
talib = ["ta-lib"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
